college prj/force-app/main/default/objects/Library__c/Library__c.object-meta.xml
<CustomObject>
    <label>Library</label>
    <nameField>
        <displayFormat>LIB-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Library</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>