college prj/force-app/main/default/objects/Library__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Library</relationshipLabel>
    <relationshipName>Library</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>