college prj/force-app/main/default/objects/Library__c/fields/Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Due__c</fullName>
    <formula>Date_Borrowed__c +15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>