college prj/force-app/main/default/objects/Library__c/fields/Late_Return_Fine__c.field-meta.xml
<CustomField>
    <fullName>Late_Return_Fine__c</fullName>
    <label>Late Return Fine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>